# ai-cash-machine

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CYBRIX-SHOP-BUILD.md  DESKREBEL-SPORT-REBUILD.md  MARKETING-STRATEGIE.md  SKILLS-SETUP.md  brand-assassin-backup.html  chatgpt-prompt-videos.txt  dashboard-standalone.html  dashboard.html  firmen-recherche.html  index.html  jarvis_data.js  leads.py  netlify.toml  package-lock.json  package.json  salespage.html  server.js  server.py  skills-lock.json  vercel.json
.agents/skills/ruflo/: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  agentdb.rvf  package-lock.json  package.json  pnpm-lock.yaml  skills.sh.json  tsconfig.json
.agents/skills/ruflo/.agents/: README.md  config.toml
.agents/skills/ruflo/.claude/: mcp.json  settings.json  settings.json.bak  statusline.sh
.agents/skills/ruflo/.claude-plugin/: README.md  marketplace.json  plugin.json
.agents/skills/ruflo/.claude-plugin/docs/: INSTALLATION.md  PLUGIN_SUMMARY.md  QUICKSTART.md  STRUCTURE.md
.agents/skills/ruflo/.claude-plugin/hooks/: hooks.json
.agents/skills/ruflo/.claude-plugin/scripts/: install.sh  ruflo-hook.sh  uninstall.sh  verify.sh
.agents/skills/ruflo/.claude/agents/: base-template-generator.md  database-specialist.md  python-specialist.md  typescript-specialist.md
.agents/skills/ruflo/.claude/checkpoints/: 1767754460.json
.agents/skills/ruflo/.claude/config/: v3-dependency-optimization.json  v3-performance-targets.json
.agents/skills/ruflo/.claude/helpers/: .LOCKED  README.md  adr-compliance.sh  context-persistence-hook.mjs  daemon-manager.sh  ddd-tracker.sh  guidance-hooks.sh  health-monitor.sh  hook-handler.cjs  learning-hooks.sh  learning-optimizer.sh  learning-service.mjs  metrics-db.mjs  pattern-consolidator.sh  perf-worker.sh  security-scanner.sh  statusline.cjs  swarm-comms.sh  swarm-hooks.sh  swarm-monitor.sh  sync-v3-metrics.sh  v3-quick-status.sh  v3.sh  validate-v3-config.sh  worker-manager.sh
.agents/skills/ruflo/.claude/workflows/: full-system-test.js  intelligence-system-hardening.js  plugin-contract-audit.js
.agents/skills/ruflo/.githooks/: pre-commit
.agents/skills/ruflo/.github/: CODEOWNERS  ISSUE_PATTERN_PERSISTENCE.md  dependabot.yml
.agents/skills/ruflo/.github/ISSUE_TEMPLATE/: rollback-incident.md
.agents/skills/ruflo/.github/issues/: alpha-89-telemetry-implementation.md
.agents/skills/ruflo/.github/supply-chain/: README.md  accepted-findings.json  allowed-deps.json  follow-ups.md
.agents/skills/ruflo/.github/workflows/: adr-166-mcp-bridge-security.yml  all-plugins-smoke.yml  business-pods-smoke.yml  ci.yml  clone-tracker.yml  codeql.yml  codex-integration-audit.yml  cost-tracker-smoke.yml  cve-audit.yml  federation-peer-rust.yml  funnel-gates.yml  helpers-manifest-guard.yml  integration-tests.yml  metaharness-ci.yml  neural-trader-smoke.yml  no-agentbbs-smoke.yml  no-cli-optdep-bloat-2561.yml  no-metaharness-smoke.yml  no-phantom-agentic-flow-subpath.yml  oia-audit-weekly.yml  rollback-manager.yml  ruflo-agent-smoke.yml  status-badges.yml  v3-ci.yml  validate-marketplace.yml  verification-pipeline.yml
.agents/skills/ruflo/.harness/: README.md  manifest.json  mcp-policy.json
.agents/skills/ruflo/crates/ruflo-federation-peer/: Cargo.toml
.agents/skills/ruflo/data/: clone-data.ledger.json  clone-data.proof.json  clone-data.rvf
.agents/skills/ruflo/docs/: IMPROVEMENT-ROADMAP.md  QUALITY-SWEEP.md  STATUS.md  TEAM-GATEWAY-CHECKLIST.md  USERGUIDE.md  _config.yml  index.md  metaharness-user-guide.md
.agents/skills/ruflo/docs/agenticow/: findings.md
.agents/skills/ruflo/docs/benchmarks/: BEIR-MATRIX.md  darwin-runs.jsonl  evolution-log.jsonl  guidance-baseline.json  guidance-phase-1.json  guidance-quantization-m4.json  guidance-retriever-scale-baseline-filtered.json  guidance-retriever-scale-baseline.json  guidance-retriever-scale-m4.json  guidance-retriever-scale-phase-1.json  guidance-retriever-scale-phase-3-m3.json  guidance-retriever-scale-phase-3-m3v2-filtered.json  (+2 more)
.agents/skills/ruflo/plugins/: README.md
.agents/skills/ruflo/ruflo/: .env.example  docker-compose.public.yml  docker-compose.yml  package.json  rvf.manifest.json
.agents/skills/ruflo/scripts/: audit-better-sqlite3-override.mjs  audit-cli-mcp-tools.mjs  audit-codex-integration.mjs  audit-env-var-precedence.mjs  audit-exit-bypass-antipattern.mjs  audit-fix-invariants.mjs  audit-hook-commands.mjs  audit-hook-handler-prompt.mjs  audit-neural-trader-safety.mjs  audit-package-dep-overlap.mjs  audit-plugin-hooks-cross-platform.mjs  audit-plugin-manifest.mjs  audit-plugin-mcp-prefix.mjs  audit-plugin-packages.mjs  audit-skill-frontmatter.mjs  audit-supply-chain.mjs  audit-tool-descriptions.mjs  audit-umbrella-version-lockstep.mjs  audit-vector-dim.mjs  audit-wrapper-dep-ranges.mjs  auto-retrain-router.mjs  bench-agenticow.mjs  bench-skill-distillation.mjs  benchmark-graph.mjs  benchmark-intelligence.mjs  benchmark-models-midtier.mjs  benchmark-models.mjs  benchmark-multiagent.mjs  benchmark-router.mjs  benchmark-seed-corpus.mjs  bulk-fix-tool-descriptions.mjs  calibration-check.mjs  check-fingerprint-schema.mjs  check-mcp-scan-format.mjs  check-metaharness-compat.mjs  cleanup-v3.sh  gen-seed-corpus-v2.mjs  gen-seed-corpus.mjs  install.sh  inventory-capabilities.mjs  (+57 more)
.agents/skills/ruflo/tests/: context-persistence-hook.test.mjs  hook-handler-runwithtimeout.test.cjs  rvf-backend.test.ts  rvf-capability-verify.test.ts  rvf-embeddings.test.ts  rvf-event-log.test.ts  rvf-integration.test.ts  rvf-learning-store.test.ts  rvf-migration.test.ts
.agents/skills/ruflo/v3/: CHANGELOG.md  CLAUDE.md  README.md  bunfig.toml  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  swarm.config.ts  tsconfig.base.json  tsconfig.json  tsconfig.vitest-temp.json  vitest.config.ts
.agents/skills/ruflo/verification/: CAPABILITIES.md  README.md  cli-mcp-tool-baseline.json  inventory.json  mcp-tool-baseline.json  results.md  witness-fixes.json
(+6929 files in other folders)
