[package]
name = "guidance-kernel"
version = "0.1.0"
edition = "2021"
description = "Rust WASM kernel for @claude-flow/guidance — deterministic policy engine"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
regex = "1"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 2          # O2 for speed (SIMD benefits from vectorization)
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for max optimization
strip = true           # Strip debug info
