# Gas Town Formula WASM Module
#
# Ultra-optimized WASM-accelerated formula operations:
# - TOML parsing (target: <0.1ms, 500x faster than JavaScript)
# - Variable cooking/substitution (target: <0.05ms)
# - Molecule generation (target: <0.1ms)
# - Batch processing (target: <1ms for 100 formulas)
#
# Build with: wasm-pack build --target web --release

[package]
name = "gastown-formula-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Ultra-optimized WASM formula parsing and cooking for Gas Town Bridge"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
toml.workspace = true
js-sys.workspace = true

# Shared optimized utilities
gastown-shared = { path = "../shared" }

# Performance dependencies
rustc-hash.workspace = true
smallvec.workspace = true
arrayvec.workspace = true

[dependencies.web-sys]
version = "0.3"
features = ["console", "Performance"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["simd"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
simd = []  # Enable SIMD optimizations

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

# Note: Profile settings inherited from workspace
